x-platform/public/dm-plugins/slide-workspace/slide-workspace.less
.layout-chooser {
  position: absolute;
  bottom: 25px;
  left: 22px;
  z-index: 10000;
  cursor: pointer;
}

.warning-editor {
  -webkit-filter: sepia(0.9);
  filter: sepia(0.9);
}
.warning-content {
  .dm-editor {
    .warning-editor;
  }
}
.warning-content {
  .editor-focus {
    .dm-editor {
      .warning-editor;
    }
  }
}


.slide-workspace {
  position: relative;

  slide-jsonoutput, slide-jsonoutput > div, slide-jsonoutput > div > .editor {
    height: 100%;
  }

  .size-half-width1, .size-half-width2 {
    width: 50%;
    float: left;
  }

  .size-half2-width1 {
    width: 60%;
    float: left;
  }

  .size-half2-width2 {
    float: left;
    width: ~"calc(40% - 3px)";
    margin-left: 1px;
  }

  .sw-col {
    transition: width 0.05s ease;
    float: left;
  }
  .sw-row {
    transition: height 0.05s ease;
  }
  .sw-col-grip {
    float: left;
    width: 3px;
    cursor: col-resize;
    background-color: #222;
  }
  .sw-row-grip {
    height: 3px;
    width: 100%;
    cursor: row-resize;
    background-color: #222;
  }
  .overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 10000;
  }

  .editor {
    position: relative;
  }

  .editor-focusable {
    border: 1px solid #000;
    .dm-editor {
      .warning-editor;
    }
  }

  .editor-focus {
    .dm-editor {
      -webkit-filter: none;
      filter: none;
    }

    .slide-workspace .editor {
      background-color: #00001a;
    }
  }

  .editor-container {
    margin: 10px;
  }

  .nav.nav-tabs {
    display: flex;
    flex-wrap: wrap;
    .workspace-file-tab {
      max-width: 200px;
      flex: 1;
    }
  }

  .sw-tabs {
    background: #1e1e1e;
    .nav {
      border: none;
      li > a {
        border-radius: 0;
      }
    }
  }

  .nav-stacked {
    .workspace-tab {
      > a {
        padding: 4px 6px;
      }
    }
  }

  .workspace-tab {
    border-radius: 0;
    position: relative;

    &.workspace-upload > div, 
    > a {
      color: #bbb;
      font-size: 0.9em;
      padding: 4px 15px;
      overflow: hidden;
    }
    &.workspace-tab-active {
      > a {
        cursor: text;
        color: #ddd;
        background-color:#0f0f0f;
      }
    }

    &.workspace-tab-condensed > a, &.workspace-tab-condensed > div {
      padding: 4px 5px;
      font-size: 0.9em;
    }

    &.workspace-file-tab {
      width: 130px;
      text-align: left;
      white-space: nowrap;

      .workspace-tab-icon {
        .cursor-pointer {
          display: none;
        }
        &:hover {
          .cursor-pointer {
            display: inline;
          }
          .type-icon {
            display: none;
          }
        }

        .type-icon {
          font-size: 5px;
        }

        top: -2px;
        position: relative;
        left: -2px;
      }

      .type-html .type-icon {
        color: #44e;
      }
      .type-js .type-icon {
        color: #4e4;
      }
      .type-css .type-icon {
        color: #e44;
      }
      .type-jade .type-icon {
        color: #59f;
      }
      .type-less .type-icon {
        color: #f82;
      }
      .type-coffee .type-icon {
        color: #6a2
      }
      .type-es6 .type-icon {
        color: #af4;
      }
    }
  }

  .no-preview {
    width: 100% !important;
  }
  .side-by-side {
    .workspace-sidebyside {
      margin-right: 0;
    }
  }


  .workspace-tab-output a {
    border: 1px solid #222;
    background-color: #777;

    &:hover {
      background-color: #555;
    }
  }

  .workspace-upload {
    > div {
      margin-right: 2px;
      line-height: 1.428571429;
      border: 1px solid transparent;
      border-radius: 4px 4px 0 0;
      position: relative;
      display: block;
      padding: 10px 15px;
      color: #fff;
      overflow: hidden;

      &:hover {
        text-decoration: none;
        background-color: #222222;
      }
    }
    input[type="file"] {
      position: absolute;
      top: 0;
      left: -35px;
      right: 0;
      bottom: 0;
      opacity: 0;
      width: 45px;
      height: 40px;
      cursor: pointer;
    }
  }

  .tab-content {
    height: ~"calc(100% - 26px)";

    overflow: hidden;
  }

  .visible {
    display: block;
  }

}

.slide-workspace-output-dialog {
  @margin: 15px;
  position: fixed;
  top: @margin;
  bottom: @margin;
  left: @margin;
  right: @margin;
  z-index: 100000;
  height: auto;

  .slide-workspace-outputs {
    transform: scale(1.0);
    width: 100%;
    height: 100%;
  }
}


.sw-outputs-scaled {
  transform: scale(0.75);
  width: 133%;
  height: 133%;
}


.slide-workspace-output2 {
  opacity: 1.0;
  transition: all .3s ease-in-out;
  transform: translateZ(0);
}

.slide-workspace-output-dialog-remove, .slide-workspace-output-dialog-add {
  opacity: 0;
}

.slide-workspace-outputs {
  position: relative;
  display: block;
  transform-origin: top left;

  &.with-address {
    height: ~"calc(100% - 25px)";
  }
  &.sw-outputs-scaled.with-address {
    height: ~"calc(133% - 25px)";
  }
}

.workspace-address {
  @addressHeight: 25px;
  @addressColor: #1e1e1e;
  color: #bbb;

  input {
    color: #ddd;
  }

  .form-control, input, .btn {
    height: @addressHeight;
    padding: 4px;
    border-radius: 0;
    box-sizing: border-box;
    border: none;
    background: @addressColor;
    color: inherit;
  }

  .btn-success {
    .btn-success;
  }

  height: 25px;
  background: @addressColor;
  border-bottom: 1px solid #000;
  margin-bottom: 0;
  position: relative;
  z-index: 2;

  button {
    width: @addressHeight;
  }

}

.iframe-fiddle-output {
  width: 100%;
  border: none;
  background: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;

  &.fadeOut {
    transition: opacity 0.2s;
    opacity: 0;
    transform: translateZ(0);
  }

  &.onBottom {
    z-index: 0;
  }

  &.hidden {
    display: none;
  }

  &.frame-background {
    background: #eee;
  }
}


.scrollable-container {
  height: 100%;
  overflow-y: auto;
}

.output-new-window {
  position: absolute;
  z-index: 10000;
  left: 0;
  top: 0;
  opacity: 0.1;

  &:hover {
    opacity: 1.0;
  }
}
slide-workspace-output {
  position: relative;
  display: block;

  .expand-btn {
    position: absolute;
    bottom: 10px;
    right: 15px;
    opacity: 0;
    font-size: 18px;
    transition: opacity 1s ease-in-out;
    z-index: 1000;
  }
  &:hover {
    .expand-btn {
      opacity: 1.0;
    }
  }
}
.refresh-button {
  position: absolute;
  z-index: 9999;
  top: 10px;
  left: 10px;
  opacity: 0.9;
}

.loading-spinner {
  position: absolute;
  z-index: 10000;
  left: 5px;
  bottom: 5px;
  background-color: #fff;
  padding: 10px;
  border-radius: 0 0 5px 0;
  color: #222;
  opacity: 1.0;
  transition: opacity 0.5s ease;

  &.hidde {
    opacity: 0.0
  }
}

